amenities modal fix overflow

--- a/frontend/src/assets/styles/cmps/stay-details/_amenities-modal.scss
+++ b/frontend/src/assets/styles/cmps/stay-details/_amenities-modal.scss
@@ -7,7 +7,7 @@
 }
 
 .all-amenities {
-    padding-top: 3.75rem;
+    padding-top: 1rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
 
